--- a/Square v0.1/css/index.css
+++ b/Square v0.1/css/index.css
@@ -1,7 +1,165 @@
-.chats-tag{
+*::-webkit-scrollbar{
+  width: 10px;
+  background-color: #f5f5f5;
+}
+
+*::-webkit-scrollbar-thumb{
+  background-color: #888;
+  border-radius: 5px;
+}
+
+.chats-tag, .chats-heading{
   color: aliceblue;
+}
+
+.convo-body{
+  background-color: #FFFFF0;
 }
 
 #chats-section{
   cursor: pointer;
+}
+
+ /* Set the background color of the active button */
+#trending-btn:not(.active) {
+  background-color: #007bff;
+  opacity: 0.8;
+}
+
+/* Set the hover color of the inactive button */
+#trending-btn:not(.active):hover {
+  background-color: #007bff;
+  opacity: 0.9;
+}
+
+/* Set the background color of the inactive button */
+#suggestion-btn:not(.active) {
+  background-color: #007bff;
+  opacity: 0.8;
+}
+
+/* Set the hover color of the inactive button */
+#suggestion-btn:not(.active):hover {
+  background-color: #007bff;
+  opacity: 0.9;
+}
+
+.chat-element.left {
+  display: inline-block;
+  background-color: #DCF8C6;
+  border-radius: 10px;
+  margin-bottom: 5px;
+  padding: 10px;
+  position: relative;
+  width: fit-content;
+  max-width: 80%;
+  word-wrap: break-word;
+  border-top-left-radius: 0;
+  margin-left: 0px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.chat-element::before {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: -15px;
+  border-style: solid;
+  border-width: 15px 15px 0 0;
+  border-color: #DCF8C6 transparent transparent transparent;
+  display: none;
+}
+
+.chat-element::after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: -13px;
+  width: 10px;
+  height: 10px;
+  background-color: #DCF8C6;
+  transform: rotate(45deg);
+  display: none;
+}
+
+.convo-body {
+  min-height: 500px;
+  max-height: 500px;
+  display: flex;
+  flex-direction:column;
+  overflow-y: auto;
+}
+
+.chat-bubble.chat-element.right {
+  background-color: #DCF8C6;
+  border-radius: 10px;
+  margin-bottom: 5px;
+  padding: 10px;
+  position: relative;
+  width: fit-content;
+  max-width: 80%;
+  word-wrap: break-word;
+  border-top-right-radius: 0;
+  margin-right: 0px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  border-top-right-radius: 0;
+  border-top-left-radius: 10px;
+  margin-left: auto;
+}
+
+.chat-bubble.chat-element.right::before {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  right: -15px;
+  border-style: solid;
+  border-width: 15px 0 0 15px;
+  border-color: transparent transparent transparent #DCF8C6;
+}
+
+.chat-bubble.chat-element.right::after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  right: -13px;
+  width: 10px;
+  height: 10px;
+  background-color: #DCF8C6;
+  transform: rotate(-45deg);
+  
+}
+
+.chatsSectionHere {
+  position: fixed;
+  overflow: hidden;
+  transition: transform 0.3s ease-out;
+  transform: translateY(100%);
+  transition: transform 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+
+.chatsSectionHere.show {
+  transform: translateY(0%);
+}
+
+.chatsSectionHere.hide {
+  transform: translateY(100%);
+}
+
+.right-block.hide {
+  position: absolute;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  z-index: -1;
+  transform: translateX(-100%);
+  transition: transform 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+
+.right-block.show {
+  transform: translateX(0);
 }
